# clone-pjj-tax-legal-22dec

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.gemini/conductor/: product.md  tech-stack.md  tracks.md  workflow.md
apps/: tax_assistant.py
apps/reflex_app/: .gitignore  rxconfig.py
data/tax_legal/: tax-database-index.json
docs/archive/: Codebasecleanup.md  DEVELOPMENT_CYCLE_1_CODEBASE_CLEANUP.md  DEVELOPMENT_CYCLE_2_MULTI_USER_MEMORY.md  DEVELOPMENT_CYCLE_4_ENHANCED_CHAT.md  DEVELOPMENT_EXECUTION_FRAMEWORK_AND_GOALS.md  ENTITY_PLAN_SELECTOR_REFACTOR_2025_11_11.md  EXTRACTION_FIXES_REPORT.md  EXTRACTION_JOURNEY.md  Frontend_Backend_Error.md  INVESTIGATION_AND_FIXES_2025_11_12_FINAL.md  NUCLEAR_SOLUTION_APPLIED_2025_11_12.md  PHASE_1_2_3_DETAILED_DESIGN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_DETAILED_PLAN.md  PHASE_1_LIMITATIONS_AND_CONTEXT.md  PROJECT_JUPITER_MASTER_REFERENCE.md  REGRESSION_FIX_PLANNER_CONTEXT_CONSTRAINTS_2025_11_11.md  platform-compatibility-analysis.md  truncated_duplicate_memagent.md
docs/planning/: CRITICAL_ASSESSMENT_AND_NEXT_STEPS.md  EXTRACTION_GUIDE.md  FIXING_PROCESS_AND_FINAL_ERROR.md  FIX_IMPORT_STRUCTURE_PLAN.md  FRONTEND_REFLEX_MIGRATION.md  IMPORT_FIX_PLAN_V1.md  MEMAGENT_JOURNEY.md  MEMAGENT_LLAMA_ISSUES.md  MISSION_ALIGNMENT_AND_DEVELOPMENT_ROADMAP.md  REFACTOR_PLAN_OPTION1.md  RESEARCH_FRAMEWORK_ALIGNMENT.md  STEP4_WINDOWS_COMPATIBILITY_ISSUE.md  SYSTEM_STATUS_COMPLETE.md  TAX_DATABASE_EXTRACTION_V2.md  TAX_LEGAL_RESTRUCTURE_PLAN.md  TRANSLATION_STRATEGY_AND_MVP_PLAN.md  UIProcess.md  (+3 more)
(+4774 files in other folders)
